Make home page fixed height + fixes on mobile menu so you can't scroll it when it's open

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,11 @@ html, body {
   flex-direction: column;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+}
+
+.page.menu-open {
+  position: fixed;
 }
 
 .container {
